--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ title: Philip Lambok's Slice of Life
 author: Philip Lambok
 url: https://philiplambok.github.io
 avatar_url: /assets/images/avatar.jpg
+paginate: 2
+paginate_path: /page:num/
+
 collections:
   books:
     output: true
@@ -12,4 +15,4 @@ highlighter: rouge
 sass:
   sass_dir: _scss
   style: :compressed
-
+plugins: [jekyll-paginate]
